rename observ-yo-yo -> pochi

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "observ-yo-yo",
-  "version": "0.0.0",
+  "name": "pochi",
+  "version": "0.0.1",
   "description": "",
   "main": "start.js",
   "scripts": {
